5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1708_3031.log
== TEST (2019-04-29 15:25:56) 
-- CODE:
x = float(input("valor de x e:"))
print("Entrada:", x)

if(x <= 1):
	print(1)
elif(x > 1) and (x <= 2):
	print(2)
elif(x > 2) and (x <= 3):
	print(x**2)
-- OUTPUT:
Entrada: 3.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:47) 
-- CODE:
x = float(input("valor de x e:"))
print("Entrada:", x)

if(x <= 1):
	print(1)
elif(x > 1) and (x <= 2):
	print(2)
elif(x > 2) and (x <= 3):
	print(x**2)
elif(x > 3):
	print(x**3)
else: 
	print("Entrada invalida")
-- OUTPUT:
Entrada: 3.6
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:58) 
-- CODE:
x = float(input("valor de x e:"))
print("Entrada:", x)

if(x <= 1):
	print(round(1,2)
elif(x > 1) and (x <= 2):
	print(round(2,2)
elif(x > 2) and (x <= 3):
	print(round(x**2,2)
elif(x > 3):
	print(round(x**3,2)
else: 
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 6
    elif(x > 1) and (x <= 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:29:54) 
-- CODE:
x = float(input("valor de x e:"))
print("Entrada:", x)

if(x <= 1):
	print(1)
elif(x > 1) and (x <= 2):
	print(2)
elif(x > 2) and (x <= 3):
	print(x**2)
elif(x > 3):
	print(x**3)
else: 
	print("Entrada invalida")
-- OUTPUT:
Entrada: 3.6
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:08) 
-- CODE:
x = float(input("valor de x e:"))
print("Entrada:", x)

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)
else: 
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(e)
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:15) 
-- CODE:
x = float(input("valor de x e:"))
print("Entrada:", x)

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.165114
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3031/main.py", line 15, in <module>
    print(e)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:28) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)
else: 
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(e)
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:33) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.142069
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3031/main.py", line 14, in <module>
    print(e)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:48) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(u)
	elif(x > 1) and (x <= 2):
		d = round(2,2)
		print(d)
	elif(x > 2) and (x <= 3):
		e = round(x**2, 2)
		print(e)
else:
	if(x > 3):
	f = round(x**3,2)
	print(e)


-- ERROR:
File "XXXX", line 6
    elif(x > 1) and (x <= 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:07) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
else:
	if(x > 3):
	f = round(x**3,2)
	print(e)

	print("Entrada invalida")
-- ERROR:
File "XXXX", line 14
    f = round(x**3,2)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:20) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)
else: 
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(e)
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:43:30) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.117571
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3031/main.py", line 14, in <module>
    print(e)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:44:19) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)

-- EXECUTION TIME:
0.156416
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3031/main.py", line 14, in <module>
    print(e)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:25) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(e)
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:44:32) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)

-- EXECUTION TIME:
0.118429
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3031/main.py", line 14, in <module>
    print(e)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:44:56) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(1)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(2)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)

-- EXECUTION TIME:
0.180558
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3031/main.py", line 14, in <module>
    print(e)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:44:58) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(1)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(2)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)

-- EXECUTION TIME:
0.215785
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3031/main.py", line 14, in <module>
    print(e)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:45:00) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(1)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(2)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(e)
NameError: name 'e' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:45:03) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(1)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(2)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(e)

-- EXECUTION TIME:
0.18072
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3031/main.py", line 14, in <module>
    print(e)
NameError: name 'e' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:45:42) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(f)

-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:45:48) 
-- CODE:
x = float(input("valor de x e:"))

if(x <= 1):
	u = round(1,2)
	print(u)
elif(x > 1) and (x <= 2):
	d = round(2,2)
	print(d)
elif(x > 2) and (x <= 3):
	e = round(x**2, 2)
	print(e)
elif(x > 3):
	f = round(x**3,2)
	print(f)

-- EXECUTION TIME:
0.175152
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
46.66
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
